cabal-version: 2.4

author: Travis Staton <hello@travisstaton.com>
category: Concurrency, Data
copyright: 2021-2023 Travis Staton, Mitchell Rosen
homepage: https://github.com/awkward-squad/demeter
license-file: LICENSE
license: BSD-3-Clause
maintainer: Travis Staton <hello@travisstaton.com>, Mitchell Rosen <mitchellwrosen@gmail.com>
name: stm-fsifo
synopsis: A FIFO queue that supports deleting an enqueued element
version: 0.1.0

description:
  @stm-fsifo@ (first still in first out) is a FIFO queue that
  supports /O(1)/ push, pop, and removing any element from the
  queue.

extra-doc-files:
  CHANGELOG.md

common component
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures
  if impl(ghc >= 9.8)
    ghc-options:
      -Wno-missing-role-annotations

library
  import: component
  build-depends:
    base ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17 || ^>= 4.18 || ^>= 4.19,
    -- Manually skipping buggy 2.5.2.*
    stm == 2.5.1.* || ^>= 2.5.3.0,
  exposed-modules: Control.Concurrent.STM.Fsifo
  hs-source-dirs: lib

test-suite test
  import: component
  build-depends:
    base,
    containers ^>= 0.6,
    hedgehog ^>= 1.2,
    stm,
    stm-fsifo,
    tasty ^>= 1.4,
    tasty-hedgehog ^>= 1.4,
    transformers ^>= 0.5 || ^>= 0.6,
  ghc-options: -rtsopts -threaded
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
