cabal-version: 2.4

author: Travis Staton <hello@travisstaton.com>
bug-reports: https://github.com/awkward-squad/stm-fsifo/issues
category: Concurrency, Data
copyright: Copyright (C) 2021-2025 Travis Staton, Mitchell Dalvi Rosen
homepage: https://github.com/awkward-squad/stm-fsifo
license-file: LICENSE
license: BSD-3-Clause
maintainer: Travis Staton <hello@travisstaton.com>, Mitchell Dalvi Rosen <mitchellwrosen@gmail.com>
name: stm-fsifo
synopsis: A FIFO queue that supports deleting an enqueued element
tested-with: GHC == 9.8.4, GHC == 9.10.1, GHC == 9.12.2
version: 1.0.0

description:
  @stm-fsifo@ (first still in first out) is a FIFO queue that
  supports /O(1)/ push, pop, and removing any element from the
  queue.

extra-doc-files:
  CHANGELOG.md
  README.md

common component
  default-language: GHC2024
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures
  if impl(ghc >= 9.8)
    ghc-options:
      -Wno-missing-role-annotations

library
  import: component
  build-depends:
    base ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17 || ^>= 4.18 || ^>= 4.19 || ^>= 4.20 || ^>= 4.21,
    stm ^>= 2.5.0,
  default-extensions:
    LambdaCase
  exposed-modules: Control.Concurrent.STM.TokenQueue
  hs-source-dirs: lib

test-suite test
  import: component
  build-depends:
    base,
    containers ^>= 0.6 || ^>= 0.7,
    hedgehog ^>= 1.4,
    stm,
    stm-fsifo,
    tasty ^>= 1.4,
    tasty-hedgehog ^>= 1.4,
  ghc-options: -rtsopts -threaded
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
