cabal-version:      2.4
name:               demeter
version:            0.1.0.0

author: Travis Staton <hello@travisstaton.com>
category: Data, Database, Network
copyright: 2022, Travis Staton
extra-source-files: CHANGELOG.md
homepage: https://github.com/awkward-squad/demeter
license-file: LICENSE
license: BSD-3-Clause
maintainer: Travis Staton <hello@travisstaton.com>, Mitchell Rosen <mitchellwrosen@gmail.com>
synopsis: A high-performance pooling abstraction
description:

        A resource pool that performs well under many conditions
        including a starved pool with many waiting threads.

library
    exposed-modules: Demeter

    build-depends:
      base >= 4.14 && < 5,
      stm-fsifo ^>= 0.1,
      stm ^>= 2.5,

    hs-source-dirs:   lib
    default-language: Haskell2010
    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints
      -Wpartial-fields
      -O2
