cabal-version:      2.4
name:               stm-fsifo
version:            0.1.0.0

author: Travis Staton <hello@travisstaton.com>
category: Data, Database, Network
copyright: 2022, Travis Staton
extra-source-files: CHANGELOG.md
homepage: https://github.com/awkward-squad/demeter
license-file: LICENSE
license: BSD-3-Clause
maintainer: Travis Staton <hello@travisstaton.com>, Mitchell Rosen <mitchellwrosen@gmail.com>
synopsis: A FIFO queue that supports deleting an enqueued element
description:

        @stm-fsifo@ (first still in first out) is a FIFO queue that
        supports /O(1)/ push, pop, and removing any element from the
        queue.

library
    exposed-modules: Control.Concurrent.STM.Fsifo
    build-depends:
      base >= 4.14 && < 5,
      stm ^>= 2.5,
    hs-source-dirs: lib
    default-language: Haskell2010
    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints
      -Wpartial-fields
      -O2

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  build-depends:
    base,
    stm-fsifo,
    stm,
    tasty ^>= 1.4,
    tasty-hedgehog ^>= 1.1 || ^>= 1.2,
    transformers ^>= 0.5 || ^>= 0.6,
    containers ^>= 0.6,
    hedgehog ^>= 1.0,
  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wpartial-fields
    -O1
    -rtsopts
    -threaded
